--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,11 +5,16 @@
   --text: hsla(0, 0%, 100%, 0.88);
 }
 
+body{
+  background-color: #F9E9E4
+}
+
 .review-box {
   padding: 2rem 1rem;
   margin: 2rem 0;
-  border: solid 2px;
-  background-color: powderblue;
+  border: solid 1px;
+  background-color: #D4EAE4;
+  border-radius: 8px;
 }
 
 .review-box h2{
@@ -25,5 +30,16 @@
 .review-box button{
   float: right;
   height:2rem;
-  background-color: pink
+  background-color: #F2A7AD;
+  border-radius: 20px;
+  padding: 0.5rem;
+  border: solid 1.5px #79523E;
+}
+
+.navLink{
+  padding: 0.7rem;
+  border: solid 2px #79523E;
+  margin: 1rem 2rem;
+  background-color: #ced97e;
+  border-radius: 20px;
 }
