--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,12 +14,13 @@ body{
   background-color: #F9E9E4
 }
 
-.review-box {
+/* .review-box {
   padding: 2rem 1rem;
   margin: 2rem 0;
   border: solid 1px;
   background-color: #D4EAE4;
   border-radius: 8px;
+  position: relative;
 }
 
 .review-box h2{
@@ -32,14 +33,62 @@ body{
   float: left; 
   width: 3rem; }
 
-.review-box button{
+
+.game-box{
+  padding: 2rem 1rem;
+  margin: auto;
+  border: solid 1px;
+  background-color: #F2A7AD;
+  border-radius: 8px;
+  width: 10rem;
+  height: 6rem;
+  -webkit-transform: translate(250%, 0%);  
+  transform: translate(250%, 0%); 
+} */
+
+.review-box {
+  padding: 2rem 1rem;
+  margin: 2rem 0;
+  border: solid 1px;
+  background-color: #D4EAE4;
+  border-radius: 8px;
+  position: relative;
+  overflow: hidden; 
+}
+
+.review-box h2 {
+  position: relative;
+  left: 1rem;
+}
+
+.review-box img {
+  height: 3rem; 
+  float: left; 
+  width: 3rem;
+}
+
+.game-box {
+  position: absolute;
+  top: 50%; 
+  right: 1rem; 
+  transform: translateY(-50%); 
+  padding: 2rem 1rem;
+  border: solid 1px;
+  background-color: #F2A7AD;
+  border-radius: 8px;
+  width: 10rem;
+  height: 6rem;
+  text-align: center;
+}
+
+/* .review-box button{
   float: right;
   height:2rem;
   background-color: #F2A7AD;
   border-radius: 20px;
   padding: 0.5rem;
   border: solid 1.5px #79523E;
-}
+} */
 
 .navLink{
   padding: 0.7rem;
@@ -66,4 +115,15 @@ body{
   padding: 0.4rem;
   border: solid 1.5px #79523E;
   font-family: "Ubuntu", sans-serif;
+}
+
+.acct-info img{
+  height: 7rem;
+  margin: 1rem;
+  
+}
+
+.acct-info p{
+  border: solid 0px;
+  width: auto;
 }
