Log out button functioning

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -96,6 +96,8 @@ body{
   margin: 1rem 2rem;
   background-color: #ced97e;
   border-radius: 20px;
+  font-size:15px;
+  color: darkslateblue;
 }
 
 .login-form label{
